test/cases/compile_errors/generic_function_call_assigned_to_incorrect_type.zig
pub export fn entry() void {
    var res: []i32 = undefined;
    res = myAlloc(i32);
}
fn myAlloc(comptime arg: type) anyerror!arg {
    unreachable;
}

// error
//
// :3:18: error: expected type '[]i32', found 'anyerror!i32'
